Add option to download and delete data

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
         <div class="stats-buttons">
             <button class="btn" id="stats-age-split-btn" data-i18n="buttons.showByAge">Show by Age Range</button>
             <button class="btn" id="stats-all-btn" data-i18n="buttons.showAll">Show All</button>
+            <button class="btn" id="stats-download-btn" data-i18n="buttons.download">Download dataset</button>
+            <button class="btn" id="stats-delete-btn" style="background:#e94e77;" data-i18n="buttons.delete">Delete dataset</button>
         </div>
         <canvas id="stats-canvas" width="500" height="300"></canvas>
         <br>
