Fix database connection

--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="static/js/i18n.js"></script>
     <script src="static/js/game-state.js"></script>
+    <script>
+    // Enable backend mode
+    window.USE_BACKEND = true;
+    window.API_BASE_URL = 'https://whack-an-error.onrender.com';  // Your Render URL
+    </script>
     <script src="static/js/static-engine.js"></script>
     <script src="static/js/api-client.js"></script>
     <script src="static/js/game-renderer.js"></script>
